Modified for use as an example

--- a/layouts/default.html.haml
+++ b/layouts/default.html.haml
@@ -2,11 +2,11 @@
 %head
   %meta{:charset => "utf-8"}
   %title
-    GCS Notes
+    Nanoc Blog
   %link{:rel => "stylesheet", :href => @items['/stylesheet/'].path}
 %body
   #banner
-    Craig's GCS Notes
+    Simple Nanoc Blog
   #main
     = yield
   #sidebar
