Attempt to merge in latest craig nanoc_blog

--- a/layouts/default.html.haml
+++ b/layouts/default.html.haml
@@ -6,7 +6,7 @@
   %link{:rel => "stylesheet", :href => @items['/stylesheet/'].path}
 %body
   #banner
-    Simple Nanoc Blog
+    Cootcraig Public Blog
   #main
     = yield
   #sidebar
